--- a/module6/form.html
+++ b/module6/form.html
@@ -9,7 +9,34 @@
 </head>
 
 <body>
+    <h1>jamale ma special pitha express</h1>
+    <form action="">
+        <p> Name: <input type="text" name="Name" placeholder="Enter your name" id=""></p>
+        <p> Email: <input type="text" name="Email" placeholder="Enter your Email" id=""></p>
+        <fieldset>
+            <legend>select your pitha</legend>
+            <p>
+                <label for="chitoi">
+                    <input type="radio" name="pitha" id="chitoi">Chitoi
+                </label>
+            </p>
+            <p>
+                <label for="vapa">
+                    <input type="radio" name="pitha" id="vapa">Vapa
+                </label>
+            </p>
 
+            <p>
+                <label for="vaja">
+                    <input type="radio" name="pitha" id="vaja">Vapa
+                </label>
+            </p>
+
+
+        </fieldset>
+
+
+    </form>
 
 </body>
 
