form fianl submission

--- a/module6/form.html
+++ b/module6/form.html
@@ -35,7 +35,16 @@
 
         </fieldset>
 
-
+        <fieldset>
+            <p><label for="sorisha"><input type="checkbox" name="vorta" id="sorisha">sorisha</label></p>
+            <p><label for="shutki"><input type="checkbox" name="vorta" id="shutki">Shutki</label></p>
+            <p><label for="begun"><input type="checkbox" name="vorta" id="begun">begun</label></p>
+        </fieldset>
+        <p>Special Instruction
+            <textarea name="instruction" id="" cols="30" rows="10"></textarea>
+        </p>
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
     </form>
 
 </body>
