menu bar comleted

--- a/module6/home.html
+++ b/module6/home.html
@@ -6,9 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home </title>
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="form.html"></a>form</li>
+                <li><a href="home.html"></a>contact</li>
+                <li><a href="form.html">about</a></li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 
