--- a/module6/explore-css3/overflow.html
+++ b/module6/explore-css3/overflow.html
@@ -11,12 +11,40 @@
             width: 500px;
             height: 400px;
             border: 5px solid steelblue;
+            /* overflow: hidden; */
+            /* overflow: scroll; */
+            /* overflow-x: scroll; */
+            /* overflow-y: scroll; */
+            overflow: scroll;
+            overflow-x: hidden;
+        }
+
+        .mango-people {
+            width: 500px;
+            height: 400px;
+            border: 5px solid brown;
+        }
+
+        .mini-mini {
+            width: 100px;
+            border: 3px solid indianred;
+            overflow: hidden;
+        }
+
+        .short-text {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     </style>
 </head>
 
 <body>
     <h1>Ami khushite godo godo</h1>
+    <div class="mini-mini">
+        <p class="short-text" title="This is a short textThis is a short tex">This is a short textThis is a short text
+        </p>
+    </div>
     <div class="mega-box">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum odio reprehenderit corrupti perspiciatis iste
             fugiat facere quia nihil veniam officiis. Quidem, laboriosam nobis? Magni quisquam iste aut non minus! Quo
@@ -55,6 +83,23 @@
             voluptates cumque. Molestiae at harum quidem impedit cupiditate facilis pariatur tempore nesciunt labore,
             sint rem fuga libero cumque quas error aliquid, optio perferendis eaque est cum? Veniam aliquid rem ratione
             dolorem labore.</p>
+    </div>
+    <div class="mango-people">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur laboriosam maxime explicabo nobis
+            temporibus repellendus dignissimos obcaecati neque necessitatibus consectetur! Id odit repellendus obcaecati
+            modi. Commodi nemo velit autem amet fugiat dignissimos, totam voluptatibus a natus praesentium provident
+            repellat odit, ab, nostrum adipisci vel quaerat. Animi accusantium, ad dignissimos adipisci incidunt illum
+            dicta fugiat recusandae, minus blanditiis fuga sunt excepturi. Ullam, porro possimus a, similique
+            consectetur illum expedita quia, nisi rem temporibus quis? Omnis quis reprehenderit, quos quo natus veniam
+            expedita modi nesciunt ullam et aspernatur, consectetur odio rerum libero sed, sapiente cumque aliquam
+            veritatis rem! Consequatur, atque provident laboriosam quo sequi necessitatibus. Expedita, earum assumenda
+            molestias perferendis maxime in porro dolor laboriosam cum magni blanditiis atque quos delectus officiis?
+            Totam, fuga consequuntur distinctio nesciunt hic ipsa sed placeat explicabo cupiditate alias porro? Harum
+            expedita non modi nobis totam incidunt iusto sit mollitia eius nisi. Quibusdam maxime ut et eos in.
+            Molestias repudiandae qui laudantium dolorem et iusto temporibus dolores deserunt itaque sequi aperiam, nisi
+            atque rerum error doloremque nobis illum hic voluptatibus vero ex! Incidunt itaque voluptatem voluptatibus
+            commodi sed veritatis, magnam, quibusdam eius doloribus voluptatum dignissimos! Magnam ea sapiente
+            blanditiis eos animi, asperiores perspiciatis aperiam. Illo, dolorem maxime.</p>
     </div>
 </body>
 
