--- a/module6/explore-css3/overflow.html
+++ b/module6/explore-css3/overflow.html
@@ -42,6 +42,7 @@
 <body>
     <h1>Ami khushite godo godo</h1>
     <div class="mini-mini">
+        <!-- text sllipsis -->
         <p class="short-text" title="This is a short textThis is a short tex">This is a short textThis is a short text
         </p>
     </div>
