--- a/module7/cricket.html
+++ b/module7/cricket.html
@@ -18,10 +18,22 @@
             border: 1px solid;
         }
 
+        .bat {
+            transition: transform 0.2s ease-in;
+        }
+
         .ball {
             width: 50px;
             height: 50px;
             background-color: red;
+            border-radius: 25px;
+            position: relative;
+            left: 370px;
+            transition: transform 1s ease-out;
+        }
+
+        .field:hover .ball {
+            transform: translate(500px);
         }
     </style>
 </head>
